--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ravenous",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alissatroiano.github.io/Ravenous-App/",
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -11,6 +12,8 @@
     "react-scripts": "^5.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -27,5 +30,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "A client-side React application, utilizing the Yelp API to search for local businesses.",
+  "main": "config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alissatroiano/Ravenous-App.git"
+  },
+  "keywords": [
+    "react",
+    "npm"
+  ],
+  "author": "Alissa Troiano",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alissatroiano/Ravenous-App/issues"
   }
 }
