--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://alissatroiano.github.io/Ravenous-App/",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "whatwg-fetch": "^2.0.4"
+    "whatwg-fetch": "^3.6.2",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "react-scripts": "^5.0.0"
@@ -35,7 +37,7 @@
   "main": "config.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alissatroiano/Ravenous-App.git"
+    "url": "https://github.com/alissatroiano/Ravenous-App"
   },
   "keywords": [
     "react",
