--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "17.x",
+    "npm": "8.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
